--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "jeroennoten/laravel-adminlte": "^3.14",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "*"
+        "livewire/livewire": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
