--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jeroennoten/laravel-adminlte": "^3.14",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
